objects/EXPRN__UDF__c.object
<CustomObject>
    <fields>
        <fullName>EXPRN__Application_ID_BusinessIQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application_ID_BusinessIQ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Application__c</fullName>
        <label>Credit Application</label>
        <referenceTo>EXPRN__Credit_Application__c</referenceTo>
        <relationshipName>UDF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Element_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF_Element_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_VALUE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Experian UDF</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian UDF</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>